2007-09-01  John Finlay  <finlay@moeraki.com>

	* codegen/argtypes.py (StringArg.write_param) 
	* codegen/codegen.py (Wrapper.write_function_wrapper): Allow StringArg
	to have default empty string ("")

2007-08-30  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gtk/gdk-2.12.defs: Put the X11 defs inside (ifdef GDK_TARGET_X11
	...).  Fixes Bug 471804 – X11 specific calls included in the gtk
	module, breaking other backends.

2007-08-29  Johan Dahlin  <jdahlin@async.com.br>

	* pango.override: Make the bindings a bit more pythonic, implement
	tp_str, tp_hash and tp_compare for a few objects.

	* tests/test_pango.py: Add tests.

2007-08-27  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* configure.in: Post-release version bump.

=== 2.11.0 ===
2007-08-27  Johan Dahlin  <jdahlin@async.com.br>

	* README:

	* NEWS: Update

2007-08-27  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* configure.in (gtk_version): Add -DHAVE_GTK_2_12 to
	PYGTK_CODEGEN_DEFINES when compiling with gtk+ 2.12.

	* gtk/gtk-base.defs (scroll_child): Idem. for
	ScrolledWindow.scroll_child.

	* gtk/gtk-2.10.defs (reorder_tab): Idem for reorder_tab.

	* gtk/gtk-base.defs: Adjust GtkNotebook virtual
	change_current_page return type to gboolean if compiling against
	gtk+ >= 2.12.

	* docs/Makefile.am (EXTRA_DIST): Add icons and cursors to dist.

	* configure.in: Fix CFLAGS to allow compilation on Solaris.

2007-08-25  John Finlay  <finlay@moeraki.com>

	* Makefile.am (doc-dist): Copy icons and cursors when making doc-dist.

2007-08-23  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gtk/Makefile.am: Fix makefile rules to regenerate the defs after
	each configure.

2007-08-21  John Finlay  <finlay@moeraki.com>

	* docs/cursors: Add missing cursor images
	* docs/icons: Add missing stock item icons
	* docs/Makefile.am (install-data-local): Install the stock item icons
	and cursor images in subdirectories of the reference docs.

2007-08-20  Johan Dahlin  <jdahlin@async.com.br>

	* tests/test_bin.py: New file.