@@ -1,3 +1,9 @@
+2007-09-02  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
+
+	* pango.override:
+	* tests/test_pango.py:
+	Bug 472908 – Make pango.Context non-instantiable.
+
 2007-09-01  John Finlay  <finlay@moeraki.com>
 
 	* codegen/argtypes.py (StringArg.write_param) 
